# ewok

./: .gitignore  .gitmodules  LGPL  README.md
.github/workflows/: build.yml
ewok_optimization/: CMakeLists.txt  package.xml
ewok_optimization/cmake/: FindSuiteSparse.cmake
ewok_optimization/include/ewok/: polynomial_3d_optimization.h  uniform_bspline_3d_optimization.h
ewok_optimization/rviz/: optimization_example.rviz
ewok_optimization/src/: polynomial_optimization_example.cpp  spline_optimization_example.cpp  spline_optimization_example2.cpp  spline_optimization_example3.cpp
ewok_optimization/test/: uniform-bspline-3d-optimization-test.cpp
ewok_poly_spline/: CMakeLists.txt  package.xml
ewok_poly_spline/include/ewok/: polynomial.h  polynomial_segment_3d.h  polynomial_trajectory_3d.h  uniform_bspline.h  uniform_bspline_3d.h
ewok_poly_spline/test/: polynomial-test.cpp  uniform-bspline-test.cpp
ewok_ring_buffer/: CMakeLists.txt  package.xml
ewok_ring_buffer/benchmarking/: benchmark.py  make_plots.py
ewok_ring_buffer/include/ewok/: ed_ring_buffer.h  raycast_ring_buffer.h  ring_buffer_base.h
ewok_ring_buffer/rviz/: ring_buffer.rviz
ewok_ring_buffer/src/: ring_buffer_example.cpp  tum_rgbd_ring_buffer_example.cpp
ewok_ring_buffer/test/: ring-buffer-base-test.cpp
ewok_simulation/: CMakeLists.txt  package.xml
ewok_simulation/benchmarking/: compute_mean_time.py
ewok_simulation/include/: bspline_lee_position_controller_node.h
ewok_simulation/launch/: trajectory_replanning_big_forest.launch  trajectory_replanning_forest.launch  trajectory_replanning_simulation.launch
ewok_simulation/meshes/: r200_bracket.stl  r200_bracket_end.stl
ewok_simulation/models/wooden_cylinder/: model.config  model.sdf
ewok_simulation/octomaps/: cylinders0.bt
ewok_simulation/rviz/: simulation.rviz
ewok_simulation/src/: bspline_lee_position_controller_node.cpp  trajectory_replanning_example.cpp  trajectory_replanning_example_pointCloud.cpp
ewok_simulation/urdf/: mav_r200.gazebo  r200.urdf.xacro  turtlebot_gazebo.urdf.xacro
ewok_simulation/worlds/: cylinders0.world  population_example.world
